Working matrix, cli completed